[package]
name = "evomush"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]

[dependencies]
gapush = {git = "ssh://git@github.com/vadixidav/gapush.git", rev = "3cf7f57e3ba8e6d345415a5877f3401d02edd058"}
rand = "0.3"
heapsize = "0.3"
serde = "0.9"
serde_derive = "0.9"
sdl2 = "0.27"
glowygraph = "0.7.2"
glium = "0.15"
glium_sdl2 = "0.13"
zoom = "1.5"
nalgebra = "0.10"
petgraph = "0.4"
num = "0.1"
itertools = "0.6"
