[package]
name = "evomush"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]

[dependencies]
gapush = {git = "ssh://git@github.com/vadixidav/gapush.git", rev = "b236237b1f0082a054b0fd1640d801f64570f0a8"}
rand = "0.3"
heapsize = "0.3"
serde = "0.9"
serde_derive = "0.9"
sdl2 = "0.27"
glowygraph = "0.7.2"
glium = "0.15"
glium_sdl2 = "0.13"
zoom = "1.5"
nalgebra = "0.10"
petgraph = "0.4"
num = "0.1"
itertools = "0.6"
